# arenaflow

./: QUALITY.md  README.md  architecture.md  deploymentspec.md  implementationspec.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  router_factory.py
backend/app/api/routes/: accessibility.py  assistant.py  config.py  crowd.py  health.py  navigation.py  operations.py  sustainability.py  transportation.py
backend/app/core/: config.py  logging.py  security.py
backend/app/models/: domain.py  requests.py  responses.py  types.py
backend/app/repositories/: bigquery_repo.py  firestore_repo.py  protocols.py  pubsub_repo.py
backend/app/services/: context.py  crowd_service.py  gemini_service.py  grounding_service.py  maps_service.py  ops_intel_service.py  sustainability_service.py  venue_graph_service.py
backend/app/services/gemini/: __init__.py  client.py  fallbacks.py  fan_fallbacks.py  generator.py  grounding.py  normalizers.py  ops_fallbacks.py  prompts.py  scalars.py  service.py  structured_normalizers.py
backend/tests/: test_app.py  test_gemini_normalization.py  test_grounding.py  test_health.py  test_navigation.py  test_security.py  test_settings.py
frontend/: Dockerfile  eslint.config.js  index.html  package.json  server.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ResultCard.test.tsx  ResultCard.tsx
frontend/src/hooks/: useApiMutation.ts
frontend/src/i18n/: strings.ts
frontend/src/types/: api.ts
scripts/: seed_demo_data.py
(+27 files in other folders)
